chore: edit homepage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "healthy-life-blog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kozrkozr.github.io",
+  "homepage": "https://healthy-food-blog.com.ua",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
